--- a/plantmonitor/plantmonitorUI/package.json
+++ b/plantmonitor/plantmonitorUI/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "ngx-mqtt": "^6.13.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
